maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:8: error: illegal start of simple pattern
      case a == 1 && !isFacingWall(=> forward(() 
                                   ^RandomMouseMaze:11: error: ')' expected but '}' found.
    }
    ^